--- a/index.html
+++ b/index.html
@@ -99,13 +99,14 @@
             <th>Breed</th>
             <th>Birthday</th>
             <th>Milk (L)</th>
-            <!-- <th>Topwood</th>
-            <th>Price</th> -->
+            <th>Topwood</th>
+            <th>Price</th>
             <th>Action</th>
         </tr>
     </thead>
     <tbody id="searchResult"></tbody>
 </table>
+
 
 
 <div id="snackbar">Some message will arrive here</div>
